--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": "20.x"
   },
   "dependencies": {
+    "@google-cloud/pubsub": "^4.4.1",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
